Displayed type grid images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="consumerMainTabLabelCommercials">Commercials</string>
     <string name="consumer_main_grid_item_description">The title of the grid item</string>
     <string name="consumer_grid_item_type_logo">Main grid item type logo</string>
+    <string name="title_activity_posts_list">PostsListActivity</string>
 </resources>
