--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="consumer_grid_item_type_logo">Main grid item type logo</string>
     <string name="title_activity_posts_list">PostsListActivity</string>
     <string name="parallax_image_of_post_type">Parallax image of post type</string>
+    <string name="title_activity_commercial_list">CommercialListActivity</string>
 </resources>
